Define path file in variables